--- a/src/styles/money.scss
+++ b/src/styles/money.scss
@@ -8,8 +8,8 @@
   box-sizing: border-box;
 
   .money-bar {
-    width: 1000px;
-    height: 4.5rem;
+    width: 100%;
+    height: 5rem;
     color: #fff;
     background-color: #2ecc71;
     background: linear-gradient(180deg, #2ecc71, #1abc9c);
