--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -2,14 +2,16 @@
 
 .header-wrapper {
   background-color: #ffff;
-  width: 100vw;
   height: 6rem;
-  top: 0;
-  left: 0;
   z-index: 999;
   display: flex;
   justify-content: center;
   align-items: center;
+  position: absolute;
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
 
   .header-inner {
     padding: 0 0 0 14px;
