--- a/src/styles/money.scss
+++ b/src/styles/money.scss
@@ -26,3 +26,36 @@
     align-items: center;
   }
 }
+
+.money-fixed {
+  width: 62.5rem;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-left: auto;
+  margin-right: auto;
+  box-sizing: border-box;
+  position: sticky;
+  top: 0;
+  left: 0;
+  right: 0;
+  transition: fixed 1s linear;
+
+  .money-bar {
+    width: 100%;
+    height: 5rem;
+    color: #fff;
+    background-color: #2ecc71;
+    background: linear-gradient(180deg, #2ecc71, #1abc9c);
+    font-family: Roboto, sans-serif;
+    font-size: 2.25rem;
+    font-weight: 700;
+    text-align: center;
+    top: 0;
+    position: sticky;
+    z-index: 9999;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+}
