--- a/src/styles/header.scss
+++ b/src/styles/header.scss
@@ -21,6 +21,7 @@
     align-items: center;
     margin-left: 28rem;
     margin-right: 28rem;
+    box-sizing: border-box;
 
     .title {
       .header-Title {
